--- a/VideoFrameTextEditor/index.html
+++ b/VideoFrameTextEditor/index.html
@@ -19,28 +19,72 @@
         </div>
         <div id="paragraph-input-section">
             <div class="paragraph-input" id="paragraph-input-0">
-                <textarea class="text-input" placeholder="Enter a paragraph from your page here."></textarea>
-                <div class="controll-section" id="controll-section-0">
+                <textarea class="text-input" id="text-input-0" placeholder="Enter a paragraph from your page here."></textarea>
+                <div class="controll-section hidden" id="controll-section-0">
+                    <select onchange="updateFont(0, this)">
+                        <option class="Arial">Arial</option>
+                        <option class="Verdana">Verdana</option>
+                        <option class="Tahoma">Tahoma</option>
+                        <option class="Trebuchet">Trebuchet</option>
+                        <option class="Times-New-Roman">Times New Roman</option>
+                        <option class="Georgia">Georgia</option>
+                        <option class="Garamond">Garamond</option>
+                        <option class="Courier-New">Courier New</option>
+                    </select>
                     <input 
-                        type="text"
-                        id="font"
-                        value="arial"                        
-                        onchange="f1(this)">
-                        <input 
                         type="number"
                         id="font-size"
-                        min="1"
+                        min="10"
                         max="100"
                         value="16"                        
-                        onchange="f2(this)">
-                    <input
-                        type="color"
-                        value="#42e6f5"
-                        id="font-color"
-                        onchange="setFontColor(this)">
-                    <button class="controll-button" id="font-highlight" onclick="highlightText(this)">
-                        <span><strong>Highlight</strong></span>
+                        onchange="updateFontSize(0, this)">
+                    <button class="controll-button" onclick="toggleClass(0, 'bold')">
+                        <span><strong><i class="fa-solid fa-bold"></i></strong></span>
                     </button>
+                    <button class="controll-button" onclick="toggleClass(0, 'italic')">
+                        <span><strong><i class="fa-solid fa-italic"></i></strong></span>
+                    </button>
+                    <button class="controll-button" onclick="toggleClass(0, 'underline')">
+                        <span><strong><i class="fa-solid fa-underline"></i></strong></span>
+                    </button>
+                    <button class="controll-button" onclick="openPicker(0, 'font-color-picker-')">
+                        <span id="font-color-0"><strong>Font Color</strong></span>
+                    </button>
+                    <div id="font-color-picker-0" class="color-picker hidden">
+                        <h3>Choose a font color</h3>
+                        <input
+                            type="color"
+                            value="black"
+                            onchange="updateFontColor(0, this)">
+                        <button onclick="closeParent(this)">Cancel</button>
+                    </div>
+                    <button class="controll-button" id="font-highlight" onclick="openPicker(0, 'highlight-color-picker-')">
+                        <span id="highlight-color-0"><strong style="background-color: #f1f19c" style="background-size: fit-content">Highlight</strong></span>
+                    </button>
+                    <div id="highlight-color-picker-0" class="color-picker hidden">
+                        <h3>Choose a highlight color</h3>
+                        <input
+                            type="color"
+                            value="#f1f19c">
+                        <button onclick="updateHighlightColor(0, this)">set highlight</button>
+                        <button onclick="removeHighlight(0)">remove</button>
+                        <button onclick="closeParent(this)">close</button>
+                    </div>
+                    <button class="controll-button" id="font-ombrelight" onclick="openPicker(0, 'ombrelight-color-picker-')">
+                        <span id="ombrelight-color-0"><strong style="background-image: linear-gradient(#9cf1a2, #cb9cf1)" style="background-size: fit-content">Ombrelight</strong></span>
+                    </button>
+                    <div id="ombrelight-color-picker-0" class="color-picker hidden">
+                        <h3>Choose two colors</h3>
+                        <input
+                            type="color"
+                            value="#9cf1a2">
+                        <input
+                            type="color"
+                            value="#cb9cf1">
+                        <button onclick="updateOmbrelightGradient(0, this)">set gradient</button>
+                        <button onclick="removeOmbrelight(0)">remove</button>
+                        <button onclick="closeParent(this)">close</button>
+                    </div>
                     <button class="controll-button" id="font-outline" onclick="outlineText(this)">
                         <span><strong>Outline</strong></span>
                     </button>
@@ -51,6 +95,8 @@
                         <span>Blur</span>
                     </button>
                 </div>
+                <button id="enter-paragraph-0" class="enter-paragraph" onclick="updateText(0)"><p>enter this text</p></button>
+                <button id="delete-paragraph-0" class="delete-paragraph" onclick="removeText(0)"><p>delete paragraph</p></button>
             </div>
             <div class="input-extra">
                 <button id="add-paragraph"><p class="giant-text">+</p><p>add another paragraph</p></button>
@@ -79,7 +125,7 @@
                 <div class="background-sample background-plain" id="background-plain-sample"></div>
                 <p>Plain Color</p>                  
             </button>   
-            <div id="plain-background-color-picker" class="color-picker hidden">
+            <div id="plain-background-color-picker" class="background-color-picker hidden">
                 <h3>Choose a color for your background</h3>
                 <input
                     id="plain-color-background"
@@ -166,7 +212,7 @@
             </button>
             <button class="background-option" onclick="setBackground(this)">
                 <div class="background-sample background-black-steam"></div>
-                <p>Black Steam</p>                    
+                <p>Black Splash</p>                    
             </button>
             <button class="background-option" onclick="setBackground(this)">
                 <div class="background-sample background-black-rain"></div>
