--- a/VideoFrameTextEditor/index.html
+++ b/VideoFrameTextEditor/index.html
@@ -22,14 +22,14 @@
                 <textarea class="text-input" id="text-input-0" placeholder="Enter a paragraph from your page here."></textarea>
                 <div class="controll-section hidden" id="controll-section-0">
                     <select onchange="updateFont(0, this)">
-                        <option class="Arial">Arial</option>
-                        <option class="Verdana">Verdana</option>
-                        <option class="Tahoma">Tahoma</option>
-                        <option class="Trebuchet">Trebuchet</option>
-                        <option class="Times-New-Roman">Times New Roman</option>
-                        <option class="Georgia">Georgia</option>
-                        <option class="Garamond">Garamond</option>
-                        <option class="Courier-New">Courier New</option>
+                        <option style="font-family: Arial, Helvetica, sans-serif">Arial</option>
+                        <option style="font-family: Verdana, Geneva, Tahoma, sans-serif">Verdana</option>
+                        <option style="font-family: Tahoma, sans-serif">Tahoma</option>
+                        <option style="font-family: Trebuchet, sans-serif">Trebuchet</option>
+                        <option style="font-family: 'Times New Roman', Times, serif">Times New Roman</option>
+                        <option style="font-family: Georgia, serif">Georgia</option>
+                        <option style="font-family: Garamond, serif">Garamond</option>
+                        <option style="font-family: 'Courier New', Courier, monospace">Courier New</option>
                     </select>
                     <input 
                         type="number"
@@ -47,53 +47,74 @@
                     <button class="controll-button" onclick="toggleClass(0, 'underline')">
                         <span><strong><i class="fa-solid fa-underline"></i></strong></span>
                     </button>
-                    <button class="controll-button" onclick="openPicker(0, 'font-color-picker-')">
-                        <span id="font-color-0"><strong>Font Color</strong></span>
-                    </button>
-                    <div id="font-color-picker-0" class="color-picker hidden">
-                        <h3>Choose a font color</h3>
-                        <input
-                            type="color"
-                            value="black"
-                            onchange="updateFontColor(0, this)">
-                        <button onclick="closeParent(this)">Cancel</button>
+                    <div>
+                        <button class="controll-button" onclick="openPicker(0, 'font-color-picker-')">
+                            <span id="font-color-0"><strong>Font Color</strong></span>
+                        </button>
+                        <div id="font-color-picker-0" class="color-picker hidden">
+                            <h3>Choose a font color</h3>
+                            <input
+                                type="color"
+                                value="black">
+                            <button onclick="updateFontColor(0, this)">set color</button>
+                            <button onclick="closeParent(this)">close</button>
+                        </div>
+                        <button class="controll-button" id="font-highlight" onclick="openPicker(0, 'highlight-color-picker-')">
+                            <span id="highlight-color-0"><strong style="background-color: #f1f19c" style="background-size: fit-content">Highlight</strong></span>
+                        </button>
+                        <div id="highlight-color-picker-0" class="color-picker hidden">
+                            <h3>Choose a highlight color</h3>
+                            <input
+                                type="color"
+                                value="#f1f19c">
+                            <button onclick="updateHighlightColor(0, this)">set highlight</button>
+                            <button onclick="removeHighlight(0)">remove</button>
+                            <button onclick="closeParent(this)">close</button>
+                        </div>
+                        <button class="controll-button" id="font-ombrelight" onclick="openPicker(0, 'ombrelight-color-picker-')">
+                            <span id="ombrelight-color-0"><strong style="background-image: linear-gradient(#9cf1a2, #cb9cf1)" style="background-size: fit-content">Ombrelight</strong></span>
+                        </button>
+                        <div id="ombrelight-color-picker-0" class="color-picker hidden">
+                            <h3>Choose two colors</h3>
+                            <input
+                                type="color"
+                                value="#9cf1a2">
+                            <input
+                                type="color"
+                                value="#cb9cf1">
+                            <button onclick="updateOmbrelightGradient(0, this)">set gradient</button>
+                            <button onclick="removeOmbrelight(0)">remove</button>
+                            <button onclick="closeParent(this)">close</button>
+                        </div>
                     </div>
-                    <button class="controll-button" id="font-highlight" onclick="openPicker(0, 'highlight-color-picker-')">
-                        <span id="highlight-color-0"><strong style="background-color: #f1f19c" style="background-size: fit-content">Highlight</strong></span>
-                    </button>
-                    <div id="highlight-color-picker-0" class="color-picker hidden">
-                        <h3>Choose a highlight color</h3>
-                        <input
-                            type="color"
-                            value="#f1f19c">
-                        <button onclick="updateHighlightColor(0, this)">set highlight</button>
-                        <button onclick="removeHighlight(0)">remove</button>
-                        <button onclick="closeParent(this)">close</button>
-                    </div>
-                    <button class="controll-button" id="font-ombrelight" onclick="openPicker(0, 'ombrelight-color-picker-')">
-                        <span id="ombrelight-color-0"><strong style="background-image: linear-gradient(#9cf1a2, #cb9cf1)" style="background-size: fit-content">Ombrelight</strong></span>
-                    </button>
-                    <div id="ombrelight-color-picker-0" class="color-picker hidden">
-                        <h3>Choose two colors</h3>
-                        <input
-                            type="color"
-                            value="#9cf1a2">
-                        <input
-                            type="color"
-                            value="#cb9cf1">
-                        <button onclick="updateOmbrelightGradient(0, this)">set gradient</button>
-                        <button onclick="removeOmbrelight(0)">remove</button>
-                        <button onclick="closeParent(this)">close</button>
-                    </div>
-                    <button class="controll-button" id="font-outline" onclick="outlineText(this)">
-                        <span><strong>Outline</strong></span>
-                    </button>
-                    <button class="controll-button" id="font-shadow" onclick="shadowText(this)">
-                        <span><strong>Shadow</strong></span>
-                    </button>    
-                    <button class="controll-button" id="font-blurred" onclick="blurText(this)">
-                        <span>Blur</span>
-                    </button>
+                    <div>
+                        <button class="controll-button" id="font-outline-0" onclick="openPicker(0, 'outline-picker-')">
+                            <span style="text-shadow: 0 0 2px #ff005d"><strong>Outline</strong></span>
+                        </button>
+                        <div id="outline-picker-0" class="color-picker hidden">
+                            <h3>Choose a color and thickness</h3>
+                            <input
+                                type="color"
+                                value="#ff005d"
+                                class="colorAndThickness">
+                            <input 
+                                type="number"
+                                min="1"
+                                max="10"
+                                value="2"
+                                class="colorAndThickness">
+                            <button onclick="addOutline(0, this)" id="add-outline">set outline</button>
+                            <button onclick="changeOutline(0, this)" class="hidden" id="change-outline">change outline</button>
+                            <button onclick="removeOutline(0, this)" id="remove-outline">remove outline</button>
+                            <button onclick="closeParent(this)">close</button>
+                        </div>
+                        <button class="controll-button" id="font-shadow-0" onclick="toggleShadow(0)">
+                            <span style="text-shadow: 1px 1px 3px #215271"><strong>Shadow</strong></span>
+                        </button>
+                        <button class="controll-button" id="font-blurred-0" onclick="toggleBlur(0)">
+                            <span>Blur</span>
+                        </button>
+                    </div>                    
                 </div>
                 <button id="enter-paragraph-0" class="enter-paragraph" onclick="updateText(0)"><p>enter this text</p></button>
                 <button id="delete-paragraph-0" class="delete-paragraph" onclick="removeText(0)"><p>delete paragraph</p></button>
