--- a/VideoFrameTextEditor/index.html
+++ b/VideoFrameTextEditor/index.html
@@ -23,7 +23,7 @@
                 <div class="controll-section hidden" id="controll-section-0">
                     <select onchange="updateFont(0, this)">
                         <option style="font-family: Arial, Helvetica, sans-serif">Arial</option>
-                        <option style="font-family: Verdana, Geneva, Tahoma, sans-serif">Verdana</option>
+                        <option style="font-family: Verdana, Geneva, sans-serif">Verdana</option>
                         <option style="font-family: Tahoma, sans-serif">Tahoma</option>
                         <option style="font-family: Trebuchet, sans-serif">Trebuchet</option>
                         <option style="font-family: 'Times New Roman', Times, serif">Times New Roman</option>
@@ -56,8 +56,8 @@
                             <input
                                 type="color"
                                 value="black">
-                            <button onclick="updateFontColor(0, this)">set color</button>
-                            <button onclick="closeParent(this)">close</button>
+                            <button onclick="updateFontColor(0, this)" class="set-button">set color</button>
+                            <button onclick="closeParent(this)" class="close-button">close</button>
                         </div>
                         <button class="controll-button" id="font-highlight" onclick="openPicker(0, 'highlight-color-picker-')">
                             <span id="highlight-color-0"><strong style="background-color: #f1f19c" style="background-size: fit-content">Highlight</strong></span>
@@ -124,7 +124,7 @@
                 <button id="delete-paragraph-0" class="delete-paragraph" onclick="removeText(0)"><p>delete paragraph</p></button>
             </div>
             <div class="input-extra">
-                <button id="add-paragraph"><p class="giant-text">+</p><p>add another paragraph</p></button>
+                <button id="add-paragraph" onclick="addParagraph()"><p class="giant-text">+</p><p>add another paragraph</p></button>
             </div>
             <div class="input-extra">
                 <input type="text" placeholder="Book title and author name (optional)"></input>
